# garmin-workouts

./: .gitignore  Dockerfile  README.md  account.py  analyse.ipynb  bot.py  docker-compose.yml  prognostics.ipynb  pyproject.toml  requirements.txt  requirements_deb.txt  requirements_dev.txt  target.yaml
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml  garminupdate.yml  image.yml  stale.yml
events/planning/: sample_event.yaml
garminworkouts/: __main__.py
garminworkouts/config/: configreader.py  includeloader.py
garminworkouts/garmin/: garminactivity.py  garminapi.py  garminbiometric.py  garminclient.py  garmintypes.py
garminworkouts/models/: date.py  duration.py  event.py  extraction.py  note.py  pace.py  power.py  settings.py  time.py  trainingplan.py  types.py  workout.py  workoutstep.py
garminworkouts/utils/: functional.py  math.py
intervalsicu/: __main__.py
intervalsicu/intervals/: api.py  client.py  extraction.py  target.py  threshold.py  workout.py
performance/: sample_performance.py
tests/: test___main__.py  test_extraction.py  test_intervals_api.py  test_threshold.py
tests/config/: test_configreader.py  test_configreader.yaml  test_configreader2.yaml  test_generator.py  test_generator.yaml  test_includeloader.py
tests/models/: test_date.py  test_extraction.py  test_power.py  test_workout.py
tests/platform/: test_platform_activity.py  test_platform_trainingplan.py
tests/trainingplans/: base_test.py  test_garmin_cycling.py
trainingplans/: lists.py  workout.py
workouts/CTS Workout Library (CTS TrainRight)/: Aerobic OverUnder 2x30 (10U _ 5O _ 10U _ 5O).yaml  Aerobic OverUnder 3x12 (4U _ 2O _ 4U _ 2O).yaml  Aerobic OverUnder 3x16 (4U _ 4O _ 4U _ 4O).yaml  Aerobic OverUnder 3x18 (5U _ 4O _ 5U _ 4O).yaml  Aerobic OverUnder 3x20 (6U _ 4O _ 6U _ 4O).yaml  Aerobic OverUnder 3x20 (7U _ 3O _ 7U _ 3O).yaml  Aerobic Tempo 1x1_5hrs.yaml  Aerobic Tempo 1x2_0hrs.yaml  Aerobic Tempo 1x30min.yaml  Aerobic Tempo 1x40min.yaml  Aerobic Tempo 1x45min.yaml  Aerobic Tempo 1x60min.yaml  Aerobic Tempo 2x30min.yaml  Aerobic Tempo 2x40min.yaml  Aerobic Tempo 2x45min.yaml  Aerobic Tempo 2x60min.yaml  Aerobic Tempo 3x30min.yaml  Aerobic Tempo 3x40min.yaml  Aerobic Tempo 3x45min.yaml  Aerobic Tempo 4x15min.yaml  Aerobic Tempo 4x20min.yaml  Aerobic Tempo 4x30min.yaml  Aerobic Tempo 5x15min.yaml  Aerobic Tempo 5x20min.yaml  Anaerobic Power Intervals 2x(30_45_60_90).yaml  Anaerobic Power Intervals 2x(60_45_30).yaml  Anaerobic Power Intervals 30-30-30-45-30-30-30.yaml  Anaerobic Power Intervals 30-30-45-45-60-45-45-30-30.yaml  Anaerobic Power Intervals 30-45-45-30.yaml  Anaerobic Power Intervals 30-45-45-90-45-45-30.yaml  Anaerobic Power Intervals 30-45-60-45-30.yaml  Anaerobic Power Intervals 30-45-60-90-60-45-30.yaml  Anaerobic Power Intervals 3x(30_45_60).yaml  Anaerobic Power Intervals 3x(60_45_30).yaml  Anaerobic Power Intervals 45-45-45-60-90-60-45-45-45.yaml  Anaerobic Power Intervals 45-45-60-90-60-45-45.yaml  Anaerobic Power Intervals 45-60-60-45.yaml  Anaerobic Power Intervals 4x(60_45_30).yaml  Anaerobic Power Intervals 4x1min.yaml  Anaerobic Power Intervals 4x30sec.yaml  (+601 more)
workouts/Friel – TCTB/: AE1_ Recovery.yaml  AE2_ Aerobic Threshold (1-4 hrs).yaml  AE3_ Intensive Endurance.yaml  AnE1_ Group Ride.yaml  AnE2_ VO2max Intervals.yaml  AnE3_ Pyramid Intervals.yaml  AnE4_ Hill Intervals (5-7 reps).yaml  ME1_ Threshold Intervals (3-5 reps).yaml  ME2_ Cruise Intervals (3-5 reps x 6-10 mins).yaml  ME4_ Sweet Spot Intervals.yaml  MF1_ Flat Force Reps (1-4 reps).yaml  MF2_ Hill Force Reps (3 sets).yaml  MF3_ Hill Repeats @70RPM (3-8 reps).yaml
workouts/GOAT - ADN Ciclista/: RODILLO_ 20-40  MODERADO.yaml  RODILLO_ AERÓBICO  MODERADO.yaml  RODILLO_ ALARGANDO  ESFUERZO.yaml  RODILLO_ BASE  MODERADA.yaml  RODILLO_ CAPACIDAD  AERÓBICA.yaml  RODILLO_ CONSOLIDAR  BASE.yaml  RODILLO_ CREAR  BASE.yaml  RODILLO_ ESTÍMULOS  AERÓBICOS.yaml  RODILLO_ FARTLEK  REACTIVACIÓN.yaml  RODILLO_ FUERZA-RESISTENCIA.yaml  RODILLO_ INTERVALOS  MODERADOS.yaml  RODILLO_ INTERVALOS  PROGRESIVOS.yaml  RODILLO_ RECUPERACIÓN  INCOMPLETA.yaml  RODILLO_ RESISTENCIA  ANAERÓBICA.yaml  RODILLO_ RODAJE  CONTROLADO.yaml  RODILLO_ SERIES  CASI-UMBRAL.yaml  RODILLO_ SERIES  CORTAS  EN  SUBIDA.yaml  RODILLO_ SERIES  CORTAS.yaml  RODILLO_ SERIES  SUB-UMBRAL.yaml  RODILLO_ SUMAR  BASE.yaml  RODILLO_ TRABAJO  AERÓBICO.yaml  RODILLO_ TRABAJO  RESPIRACIÓN.yaml  SUBIDA EN FATIGA.yaml
workouts/Testing Protocols/: 1 - Estimated FTP 3m Max Effort (eFTP).yaml  4 - Power Profile Test.yaml  DAY1_ 5m all out effort (MAP_VO2).yaml  DAY2_ FTP Test (20-30 minutes).yaml  DAY3_ 1m Max Effort.yaml  DAY4_ Max Sprint Effort.yaml  Empirical FTP test.yaml  L01 - Lactate Test 01.yaml  L02 - Lactate Test - AC & VLaMax.yaml  L03 - Full Lactate Profile.yaml  LTSC.yaml  MAP Test (25W_step for 180s).yaml  Test DFA a1.yaml
workouts/Workouts/: 30-20-10-GO! [Lite].yaml  40 minutes of Power.yaml  Climb Time.yaml  Day 14.yaml  Day 5 - Endurance & FTP.yaml  Endurance Elevator [Lite].yaml  Give and Take [Lite].yaml  Ignite.yaml  Interval Power Play.yaml  Marianne Vos_ TT workout.yaml  Rainy day 15mins set.yaml  SST (Long).yaml  Sprint Booster [Lite].yaml  Terrain Toner.yaml
workouts/cycling/: #18-DPC Zone 2 Ride + _Sweetspot_ - Session 1.yaml  01_ Let's Get Moving.yaml  02_ Get In the Zone.yaml  03_ Rainbow Pyramid.yaml  04_ 30-20-10-GO!.yaml  06_ Tabata Time.yaml  07_ Hustle and Flow.yaml  08_ Build and Release.yaml  09_ Stayin' Alive.yaml  10_ HIIT It Don't Quit It!.yaml  (+21 more)
(+2442 files in other folders)
