[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin_workouts"
version = "0.1.0"
description = "A Python project for managing Garmin workouts"
authors = [
    { name = "osalgado", email = "osalgado@example.com" }
]
license = { file = "LICENSE" }
readme = {file = "README.md", content-type = "text/markdown"}
# Python 3.10 or higher is required due to the use of modern language features and libraries that are incompatible with earlier versions.
requires-python = ">=3.10"
dependencies = [
    "requests==2.32.4",
    "pyyaml==6.0.2",
    "numpy==2.3.0",
    "xlrd==2.0.2",
    "pandas==2.3.0",
    "cloudscraper==1.2.71",
    "python-decouple==3.8",
    "python-telegram-bot==22.1",
    "bpython==0.25",
    "certifi==2025.6.15",
    "garth==0.5.17"
]

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "pytest-vcr==1.0.2",
    "pytest-cov==6.2.1",
    "flake8==7.3.0",
]

debug = [
    "ipykernel==6.29.5",
    "matplotlib==3.10.3",
    "scipy==1.16.0",
]

[project.scripts]
garmin-workouts = "garmin_workouts.cli:main"

keywords = [
    "garmin",
    "workouts",
    "fitness",
    "exercise",
    "training",
    "python"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/osalgado/garmin_workouts"
