[project]
name = "garmin_workouts"
version = "0.1.0"
description = "A Python project for managing Garmin workouts"

license = { file = "LICENSE" }
readme = {file = "README.md", content-type = "text/markdown"}
# Python 3.10 or higher is required due to the use of modern language features and libraries that are incompatible with earlier versions.
requires-python = ">=3.10"
dependencies = [
    "pip==25.3",
    "setuptools==80.9.0",
    "wheel==0.45.1",
    "requests==2.32.5",
    "pyyaml==6.0.3",
    "numpy==2.3.4",
    "xlrd==2.0.2",
    "pandas==2.3.3",
    "cloudscraper==1.2.71",
    "pytest-httpserver==1.1.3",
    "python-decouple==3.8",
    "python-telegram-bot==22.5",
    "bpython==0.26",
    "certifi==2025.10.5",
    "garth==0.5.19"
]

[project.optional-dependencies]
test = [
    "pytest==9.0.0",
    "pytest-vcr==1.0.2",
    "pytest-cov==7.0.0",
    "flake8==7.3.0",
]

debug = [
    "ipykernel==7.1.0",
    "matplotlib==3.10.7",
    "scipy==1.16.3",
]

[project.scripts]
garmin-workouts = "garmin_workouts.cli:main"

keywords = [
    "garmin",
    "workouts",
    "fitness",
    "exercise",
    "training",
    "python"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/osalgado/garmin_workouts"
